# scavenger_interface

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: rosconsole.conf
include/: .passive_hunter.h.swo  hunter.h  passive_hunter.h  scavenger_constants.h  scavenger_ros_interface.h
launch/: scavenger_interface.launch
src/: hunterNode.cpp  hunter_launcher.cpp  passiveHunter.cpp  passive_hunter.cpp  scavengerRosInterface.cpp  scavenger_ros_interface.cpp
