<?xml version="1.0"?>
<package format="2">
  <name>scavenger_interface</name>
  <version>0.0.1</version>
  <description>The scavenger_interface package</description>

  <maintainer email="maxwell@cs.utexas.edu">Maxwell Svetlik</maintainer>


  <license>MIT</license>


  <author email="maxwell@cs.utexas.edu">Maxwell Svetlik</author> -->

  <depend>OpenCV</depend>
  <depend>roscpp</depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>darknet_ros_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>scavenger_hunt_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslib</build_depend>

  <exec_depend>ffmpeg</exec_depend>
  <exec_depend>libavcodec-dev</exec_depend>
  <exec_depend>libavformat-dev</exec_depend>
  <exec_depend>libavutil-dev</exec_depend>
  <exec_depend>libswscale-dev</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>


  <export>
  </export>
</package>
